[package]
name = "explorer-rs"
version = "0.1.0"
authors = ["elaineo <elaine.ou@gmail.com>"]

[[bin]]
name = "explorer-rs"
path = "src/main.rs"

[dependencies]
leveldb = "*"
rustc-serialize = "0.3"
serde = "0.9"
serde_json = "1.0"
serde_derive = "*"
hyper = "*"
jsonrpc-core = { git = "https://github.com/ethcore/jsonrpc.git", branch="master" }
jsonrpc-minihttp-server = { git = "https://github.com/ethcore/jsonrpc.git", branch="master" }
reqwest = "*"
