[package]
name = "explorer"
version = "0.1.0"
authors = ["elaineo <elaine.ou@gmail.com>"]

[lib]
name = "explorer"
path = "src/lib.rs"

[[bin]]
name = "explorer-rs"
path = "src/main.rs"

[dependencies]
leveldb = "*"
rustc-serialize = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
jsonrpc-core = "7.0.1"
jsonrpc-http-server = "7.0.1"
lazy_static = "0.2"
reqwest = { version = "0.6", optional = true }

[features]
default = ["http"]
http = ["reqwest"]